Replace deprecated wrapper constructors with valueOf() calls
Co-authored-by: JakeDot <12250212+JakeDot@users.noreply.github.com>