@@ -82,7 +82,7 @@ public class Player extends Thing {
     public void leaveZone (Zone z) {
         TableLib.removeItem(insideOfZones, z);
         if (insideOfZones.len() > 0)
-            container = (Container)insideOfZones.rawget(new Double(insideOfZones.len()));
+            container = (Container)insideOfZones.rawget(Double.valueOf(insideOfZones.len()));
         //TableLib.removeItem(z.inventory, this);
     }
 
